# nuntius

./: .gitignore  .travis.yml  CHANGELOG.md  CNAME  MANIFEST.in  Pipfile  README.md  index.html  main.js  manage.py  package-lock.json  package.json  pyproject.toml  setup.py  style.css
.github/workflows/: codeql-analysis.yml
assets/: index.0d3b4ffd.css  index.11fc00f6.css  index.457e3382.css
mailer/: apps.py  celery.py  models.py  tasks.py  urls.py  views.py
mailer/admin/: fields.py  panels.py
mailer/migrations/: 0001_initial.py  0002_add_mosaico.py  0002_campaign_task_uuid.py
mailer/static/mailer/mosaico/: mosaico-libs.min.js  mosaico-libs.min.js.map  mosaico.min.js
mailer/templates/mailer/: editor.html
nuntius/: __init__.py  _tasks.py  actions.py  app_settings.py  apps.py  celery.py  messages.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
nuntius/admin/: __init__.py  fields.py  panels.py  push_panels.py
nuntius/locale/fr/LC_MESSAGES/: django.po
nuntius/management/commands/: nuntius_worker.py
nuntius/migrations/: 0001_initial.py  0002_add_mosaico.py  0003_allow_no_segments.py  0004_add_esp_id.py  0005_change_status_choices.py  0006_subscriber_verbose_name.py  0007_message_content_text_blank.py  0008_campaign_first_sent.py  0009_verbose_names.py  0010_verbose_names.py  0011_open_click_counts.py  0012_campaignsentevent_tracking_id.py  0013_esp_message_id_not_editable.py  0014_campaign_signature_key.py  0015_only_one_segment_model.py  0016_indices_and_ordering.py  0017_campaign_utm_name.py  0018_remove_campaign_task_uuid.py  0019_add_tracking_index.py  0020_auto_20210118_1100.py  0021_create_push_campaign_models.py  0022_add_start_and_end_dates_to_campaigns.py  0023_add_help_text_to_pushcampaign_notification_tag.py  0024_alter_mosaicoimage_file.py
nuntius/models/: __init__.py  email_campaigns.py  mixins.py  push_campaigns.py  subscriber.py
nuntius/static/mailer/mosaico/: mosaico-material.min.css.map  mosaico.min.css  mosaico.min.js.map
nuntius/static/nuntius/mosaico/: mosaico-material.min.css  mosaico-material.min.css.map  mosaico.min.css  mosaico.min.css.map
nuntius/templates/admin/: base_site.html  count.html  subscriber_count.html
nuntius/templates/admin/nuntius/: count.html  subscriber_count.html
nuntius/templates/mailer/: editor.html
nuntius/templates/nuntius/: editor.html
nuntius/utils/: messages.py  notifications.py  processes.py
public/: CNAME
standalone/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  views.py
standalone/fixtures/: subscribers.json
standalone/locale/fr/LC_MESSAGES/: django.po
standalone/management/commands/: fill_database.py
standalone/migrations/: 0001_initial.py  0002_verbose_names.py
standalone/tests/: test_bouncing.py  test_campaigns.py  test_pushing.py  test_pushing_firebase.py  test_sending.py  test_subscribers.py  test_tracking.py
tests/: __init__.py  admin.py  models.py  tasks.py  test_settings.py  urls.py
tests/fixtures/: subscribers.json
tests/management/commands/: fill_database.py
tests/migrations/: 0001_initial.py
tests/tests/: test_bounces.py  test_bouncing.py  test_campaigns.py  test_sending.py  test_subscribers.py  test_tracking.py
