[tool.poetry]
name = "nuntius"
version = "2.4.0"
description = "A newsletter app to be used with Django or standalone."
authors = ["Jill Royer <hello@jillroyer.me>", "Salomé Cheysson <salome@cheysson.fr>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/lafranceinsoumise/nuntius"

classifiers= [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications :: Email",
]

packages = [
    { include = "nuntius" }
]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=2.0"
Pillow = ">=9.0.1"
django-stdimage = "*"
html2text = "*"
tenacity = "*"
django-anymail = { version = "*", optional = true }
boto3 = { version = "*", optional = true }
mysqlclient = { version = "*", optional = true }
django-push-notifications = {version = ">=2.0.0", optional = true}
apns = {version = ">=2.0.1", optional = true}
pywebpush = {version = ">=1.14.0", optional = true}
dj-database-url = ">=1.2.0"
pillow = "10.1.0"

[tool.poetry.dev-dependencies]
tqdm = "^4.60.0"
black = "^23.1.0"

[tool.poetry.extras]
anymail = ["django-anymail", "boto3"]
mysql = ["mysqlclient"]
push = ["django-push-notifications", "apns", "pywebpush"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
